<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_data_to_display">No data to display</string>
    <string name="try_again">Try again</string>
    <string name="an_error_occurred">No Internet found.Check your connection or Try again </string>
    <string name="about">About</string>
    <string name="website">Website</string>
    <string name="please_wait">Please Wait....</string>
    <string name="oh_no">Oh no!</string>
    <string name="not_stated">Not Stated</string>
    <string name="hireable">Hireable</string>
    <string name="loading_contents">Loading Contents.....</string>
    <string name="instrustions_empty_state">Check your internet connection and swipe to Refresh</string>
    <string name="empty_state">No data to display</string>
</resources>