<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/main_display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"


    >

    <RelativeLayout
                    android:id="@+id/sub_main_display"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"
        >

    <android.support.v4.widget.SwipeRefreshLayout

        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_members"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            >


        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2000"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/pbloading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_contents"
            android:layout_gravity="center"
            android:id="@+id/textView"
            android:layout_below="@+id/pbloading"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/noInternetConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1000"
        android:visibility="gone">


        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/avata"
            android:text="@string/oh_no"
            android:textSize="30sp"
            android:layout_marginBottom="@dimen/Error_spacing"
            />

        <TextView
            android:id="@+id/try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/an_error_occurred"
            android:textSize="@dimen/no_internet_connection"
            android:layout_below="@+id/error_message"

            />
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="trigger"
            android:text="@string/try_again"
            android:layout_marginTop="@dimen/Error_spacing"
            android:textSize="@dimen/no_internet_connection"
            android:textColor="@color/links"
            android:layout_centerInParent="true"
            android:layout_below="@+id/try_again"
            />


    </RelativeLayout>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:onClick="trigger"-->
            <!--android:text="@string/try_again"-->
            <!--android:textSize="@dimen/no_internet_connection"-->
            <!--android:textColor="@color/links"-->
            <!--android:visibility="visible"-->
            <!--/>-->
    <TextView
        android:id="@+id/emptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_to_display"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />



         </RelativeLayout>
    <LinearLayout
        android:id="@+id/footerPB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        >
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    </LinearLayout>

    </LinearLayout>
